--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Ferran Etienne</h2>
-    <a href="activitats/activitats.html">Anar a activitats</a>
+    <h2> HTML</h2>
+    <h3>Formato</h3>
+    <a href="html/02_formato/activitat1.html">activitat 1</a>
 </body>
 </html>
