Activitats de la 2 a la 5

--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -9,5 +9,8 @@
     <h2> HTML</h2>
     <h3>Formato</h3>
     <a href="html/02_formato/activitat1.html">activitat 1</a>
+    <a href="html/02_formato/activitat2.html">activitat 2</a>
+    <a href="html/02_formato/activitat3.html">activitat 3</a>
+    <a href="html/02_formato/activitat4.html">activitat 4</a>
 </body>
 </html>
