--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -12,5 +12,7 @@
     <a href="html/02_formato/activitat2.html">activitat 2</a>
     <a href="html/02_formato/activitat3.html">activitat 3</a>
     <a href="html/02_formato/activitat4.html">activitat 4</a>
+    <a href="html/02_formato/activitat5.html">activitat 5</a>
+    <a href="html/02_formato/activitat6.html">activitat 6</a>
 </body>
 </html>
