activitat 6 y configuracio de tornada

--- a/activitats/html/02_formato/activitat2.html
+++ b/activitats/html/02_formato/activitat2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"></html>
 <head>
+    <a href="../../activitats.html">Torna al inici</a>
 <h1>Titulo siguiente con h1</h1>
 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque hic nemo veritatis nihil odit aliquam architecto eveniet aliquid excepturi laboriosam possimus iusto quos animi aut illum. Aspernatur, maiores consequuntur!</h4>
 <h2>Titulo secundario con h2</h2>
