--- a/activitats/html/02_formato/activitat3.html
+++ b/activitats/html/02_formato/activitat3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="../../activitats.html">Torna al inici</a>
     <h1>Aqui estoy gastando h1</h1>
     <h2>Aqui estoy gastando h2</h2>
     <h3>Aqui estoy gastando h3</h3>
