--- a/activitats/html/02_formato/activitat4.html
+++ b/activitats/html/02_formato/activitat4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <a href="../../activitats.html">Torna al inici</a>
 <h1>Actualidad</h1>
 <h5>La<b>sintaxis HTML</b>es altamente demandado en el actual <em>panorama tecnologico</em></h5>
     </head>
