--- a/activitats/html/02_formato/activitat6.html
+++ b/activitats/html/02_formato/activitat6.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <a href="../../activitats.html">Torna al inici</a>
         <h1>Julio Verne</h1>
-        <h3><b>Julio Gabriel Verne</b>, tambien conocido en los paises hispanohablantes como <b>Julio Verne</b>(Nanates, 8 de Febrero de 1828-Amiens, 24 de Marzo de 1905), fue un escritor, poeta y dramaturgo frances celebre por sus <b>novelas de aventuras</b> y por su profunda influencia en el genero literario de la <b>ciencia ficcion</b>. Se lo considera, junto con H. G. Wells, el </h3>
+        <h3><b>Julio Gabriel Verne</b>, tambien conocido en los paises hispanohablantes como <b>Julio Verne</b>(Nanates, 8 de Febrero de 1828-Amiens, 24 de Marzo de 1905), fue un escritor, poeta y dramaturgo frances celebre por sus <b>novelas de aventuras</b> y por su profunda influencia en el genero literario de la <b>ciencia ficcion</b>. Se lo considera, junto con H. G. Wells, el &lt;&lt;padre de la ciencia ficcion&gt;&gt;</h3>
+        <h3>Nacido de una familia <em>burguesa</em>, estudio para continuar los pasos de su padre como abogado, pero muy joven decidio abandonar ese camino para dedicarse a la literatura. Su colaboracion con el editor <b>Pierre-Jules</b> Hetzel dio como fruto la creacion de Viajes extradionarios, una popular serie de novelas de aventuras escrupulosamente documentadas y visionarias entre las que se incluian las famosas <em>Cinco semanas en el globo</em> (1863), <em>Viaje al centro de la tierra</em> (1864), <em>De la Tierra a la Luna</em> (1865), <em>Veinte mil leguas de viaje submarino</em> (1870), <em>La vuelta al mundo en ochenta dias</em> (1872), o <em>La isla misteriosa</em> (1874).</emZ></h3>
     </head>
 </html>
