--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -14,5 +14,6 @@
     <a href="html/02_formato/activitat4.html">activitat 4</a>
     <a href="html/02_formato/activitat5.html">activitat 5</a>
     <a href="html/02_formato/activitat6.html">activitat 6</a>
+    <a href="html/02_formato/activitat7.html">activitat 7</a>
 </body>
 </html>
