--- a/activitats/html/02_formato/activitat1.html
+++ b/activitats/html/02_formato/activitat1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="../../activitats.html">Torna al inici</a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
