--- a/activitats/html/02_formato/activitat7.html
+++ b/activitats/html/02_formato/activitat7.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
+        <a href="../../activitats.html">Torna al inici</a>
     </head>
 </html>
