--- a/activitats/html/02_formato/activitat7.html
+++ b/activitats/html/02_formato/activitat7.html
@@ -2,5 +2,8 @@
 <html lang="en">
     <head>
         <a href="../../activitats.html">Torna al inici</a>
+        <h1>Vacaciones al infierno (Francia)</h1>
+        <h4>Fui a francia donde me hice unas vueltas en un <b>Karting</b> y tambien fui a un mercado donde conoci a un <em>Indio</em></h4>
+        <p>un mercado es un sitio donde venden ropa</p>
     </head>
 </html>
