--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -8,12 +8,23 @@
 <body>
     <h2> HTML</h2>
     <h3>Formato</h3>
-    <a href="html/02_formato/activitat1.html">activitat 1</a>
-    <a href="html/02_formato/activitat2.html">activitat 2</a>
-    <a href="html/02_formato/activitat3.html">activitat 3</a>
-    <a href="html/02_formato/activitat4.html">activitat 4</a>
-    <a href="html/02_formato/activitat5.html">activitat 5</a>
-    <a href="html/02_formato/activitat6.html">activitat 6</a>
-    <a href="html/02_formato/activitat7.html">activitat 7</a>
+        <a href="html/02_formato/activitat1.html">Activitat 1</a>
+        <a href="html/02_formato/activitat2.html">Activitat 2</a>
+        <a href="html/02_formato/activitat3.html">Activitat 3</a>
+        <a href="html/02_formato/activitat4.html">Activitat 4</a>
+        <a href="html/02_formato/activitat5.html">Activitat 5</a>
+        <a href="html/02_formato/activitat6.html">Activitat 6</a>
+        <a href="html/02_formato/activitat7.html">Activitat 7</a>
+    <h3>Hypervinculos</h3>
+        <a href="html/03_hypervinculos/activitat1.html">Activitat 1</a>
+        <a href="html/03_hypervinculos/activitat2.html">Activitat 2</a>
+    <h3>Listas</h3>
+        <a href="html/04_listas/activitat1.html">Activitat 1</a>
+        <a href="html/04_listas/activitat2.html">Activitat 2</a>
+        <a href="html/04_listas/activitat3.html">Activitat 3</a>
+        <a href="html/04_listas/activitat4.html">Activitat 4</a>
+        <a href="html/04_listas/activitat5.html">Activitat 5</a>
+    <h3>Imagenes</h3>
+        <a href="">Activitat 1</a>
 </body>
 </html>
