--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -25,6 +25,8 @@
         <a href="html/04_listas/activitat4.html">Activitat 4</a>
         <a href="html/04_listas/activitat5.html">Activitat 5</a>
     <h3>Imagenes</h3>
-        <a href="">Activitat 1</a>
+        <a href="html/05_imagenes/activitat1.html">Activitat 1</a>
+        <a href="html/05_imagenes/activitat2.html">Activitat 2</a>
+        <a href="">Activitat 3</a>
 </body>
 </html>
