--- a/activitats/html/05_imagenes/activitat3.html
+++ b/activitats/html/05_imagenes/activitat3.html
@@ -9,6 +9,6 @@
         >
         <h2>230 Euros</h2>
         <h3>Descripcion</h3>
-        <h4>Produce caprichosas descaergas electricas</h4>
+        <h4>Produce caprichosas descaergas electricas. No apto para niños, adultos o mayores</h4>
     </body>
 </html>
