--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -27,6 +27,14 @@
     <h3>Imagenes</h3>
         <a href="html/05_imagenes/activitat1.html">Activitat 1</a>
         <a href="html/05_imagenes/activitat2.html">Activitat 2</a>
-        <a href="">Activitat 3</a>
+        <a href="html/05_imagenes/activitat3.html">Activitat 3</a>
+        <a href="html/05_imagenes/activitat4.html">Activitat 4</a>
+    <h3>Tablas</h3>
+        <a href="html/06_tablas/activitat1.html">Activitat 1</a>
+        <a href="html/06_tablas/activitat2.html">Activitat 2</a>
+        <a href="html/06_tablas/activitat3.html">Activitat 3</a>
+    <h3>Formularios</h3>
+        <a href="html/07_formulario/activitat1.html">Activitat 1</a>
+        <a href="html/07_formulario">Activitat 2</a>
 </body>
 </html>
