--- a/activitats/html/07_formulario/activitat1.html
+++ b/activitats/html/07_formulario/activitat1.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        
+        <form>
+            <label for="MiNombre">Cual es tu nombre?</label>
+            <input id="MiNombre" type="text" name="Name">
+            <p></p>
+            <label for="MiCorreo">Cual es tu correo</label>
+            <input id="MiCorreo" type="text" name="Name">
+            <p></p>
+            <label for="MiMensaje">Que quieres decir-nos?</label>
+            <input id="MiMensaje" type="text" name="Name">
+        </form>
     </body>
 </html>
