--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -35,6 +35,9 @@
         <a href="html/06_tablas/activitat3.html">Activitat 3</a>
     <h3>Formularios</h3>
         <a href="html/07_formulario/activitat1.html">Activitat 1</a>
-        <a href="html/07_formulario">Activitat 2</a>
+        <a href="html/07_formulario/activitat2.html">Activitat 2</a>
+        <a href="html/07_formulario/activitat3.html">Activitat 3</a>
+        <a href="html/07_formulario/activitat4.html">Activitat 4</a>
+    <h3>Multimedia</h3>
 </body>
 </html>
