--- a/activitats/html/07_formulario/activitat4.html
+++ b/activitats/html/07_formulario/activitat4.html
@@ -2,9 +2,31 @@
 <html lang="en">
     <body>
         <form>
+            Modelo
             <select name="Modelo">
                 <option value="0">XI1</option>
                 <option value="1">ST3</option>
+                <option value="2">SBR2</option>
+                <option value="3">TRE</option>
+            </select>
+            <p></p>
+            Lente
+            <select name="Lente">
+                <option value="0">Macro</option>
+                <option value="1">Ojo de pez</option>
+                <option value="2">Zoom</option>
+                <option value="3">Gran angular</option>
+                <option value="4">Till-Shift</option>
+                <option value="5">Fijo</option>
+                <option value="6">Teleobjetivo</option>
+            </select>
+            <p></p>
+            Filtro
+            <select name="Filtro">
+                <option value="0">Densidad neutra</option>
+                <option value="1">Polarizador circular</option>
+                <option value="2">Ultravioleta</option>
+                <option value="3">Graduado de densidad</option>
             </select>
         </form>
     </body>
