--- a/activitats/html/08_multimedia/activitat2.html
+++ b/activitats/html/08_multimedia/activitat2.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        
+        <h1>¡Descubre nuestra emocionante película!</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/a8eKPw6mLqg?si=stHVZ4Mf0bM7HxBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Información Técnica</h2>
+        <table border="1">
+            <tr>
+                <th>Título</th>
+                <td>Un mundo extraño</td>
+            </tr>
+            <tr>
+                <th>Duración</th>
+                <td>102 minutos</td>
+            </tr>
+            <tr>
+                <th>Actores</th>
+                <td>Jake Hyllenhall, ​Jaboukie Young-White y Lucy Liu</td>
+            </tr>
+            <tr>
+                <th>Año</th>
+                <td>2022</td>
+            </tr>
+        </table>
     </body>
 </html>
