--- a/activitats/html/03_hypervinculos/menudeldia.html
+++ b/activitats/html/03_hypervinculos/menudeldia.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
         <a href="index_restaurant.html">Volver al inicio</a>
         <h1>Menus</h1>
         <h2>Del dia</h2>
@@ -9,5 +14,5 @@
         <h2>Familia</h2>
         <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem cum, eos dolor nihil deserunt dolorum expedita consequuntur similique impedit earum soluta quaerat iusto, laudantium quasi optio nemo reiciendis, non porro.</h4>
         <a href="">Ver imagen</a>
-    </head>
+    </body>
 </html>
