--- a/activitats/html/05_imagenes/activitat1.html
+++ b/activitats/html/05_imagenes/activitat1.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <h1>Cafeteria</h1>
         <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dignissimos sed aliquid a quaerat, autem impedit sint velit tempore, earum modi, quisquam ratione aspernatur quibusdam esse at officiis adipisci iste?</h4>
