--- a/activitats/html/09_contenido/activitat2-1.html
+++ b/activitats/html/09_contenido/activitat2-1.html
@@ -5,27 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Listado de Discos de Jazz</title>
         <style>
-            body {
-                font-family: Arial, sans-serif;
+            body {font-family: Arial, sans-serif;
                 max-width: 800px;
-                margin: 0 auto;
-            }
-            h1, h2 {
-                color: #333;
-            }
-            ul {
-                list-style-type: none;
-                padding: 0;
-            }
-            li {
-                margin-bottom: 10px;
-            }
-            footer {
-                margin-top: 20px;
+                margin: 0 auto;}
+            h1, h2
+            ul {list-style-type: none;
+                padding: 0;}
+            li {margin-bottom: 10px;}
+            footer {margin-top: 20px;
                 border-top: 1px solid #ccc;
                 padding-top: 10px;
-                color: #777;
-            }
+                color: #777;}
         </style>
     </head>
     <body>
