--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -83,6 +83,14 @@
         <h3>Interactivos</h3>
         <ul>
             <li><a href="html/11_interactivos/activitat1.html">Activitat 1</a></li>
+            <li><a href="html/11_interactivos/activitat2.html">Activitat 2</a></li>
+            <li><a href="html/11_interactivos/activitat3.html">Activitat 3</a></li>
+        </ul>
+    </ul>
+    <ul>
+        <h3>Accesibilidad</h3>
+        <ul>
+            <li><a href="html/12_accesibilidad/activitat1.html">Activitat 1</a></li>
         </ul>
     </ul>
 </body>
