--- a/activitats/html/02_formato/activitat1.html
+++ b/activitats/html/02_formato/activitat1.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <a href="../../activitats.html">Torna al inici</a>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Incididunt eu labore nostrud labore commodo deserunt consectetur ex et consectetur occaecat. Consequat dolor fugiat magna mollit adipisicing occaecat aliquip eiusmod ad labore proident non consectetur. Quis excepteur eu nostrud anim Lorem pariatur sunt tempor quis nulla eu aute officia. Officia Lorem Lorem sint dolor eu sit nostrud elit cupidatat qui mollit proident. Aute deserunt occaecat aliquip amet aliquip in. Ullamco aliquip id culpa duis cupidatat ullamco ex ea.</p>
-
-<p>Elit aute dolor dolore anim. Fugiat ut mollit adipisicing aute esse dolor esse culpa commodo esse aliquip. Do id voluptate mollit labore quis deserunt. Veniam fugiat adipisicing officia aliquip consectetur eu excepteur deserunt eiusmod aliqua ad. Deserunt aliquip nisi sunt duis nisi mollit magna magna dolor elit quis ut.</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
+        <p>Incididunt eu labore nostrud labore commodo deserunt consectetur ex et consectetur occaecat. Consequat dolor fugiat magna mollit adipisicing occaecat aliquip eiusmod ad labore proident non consectetur. Quis excepteur eu nostrud anim Lorem pariatur sunt tempor quis nulla eu aute officia. Officia Lorem Lorem sint dolor eu sit nostrud elit cupidatat qui mollit proident. Aute deserunt occaecat aliquip amet aliquip in. Ullamco aliquip id culpa duis cupidatat ullamco ex ea.</p>
+        <p>Elit aute dolor dolore anim. Fugiat ut mollit adipisicing aute esse dolor esse culpa commodo esse aliquip. Do id voluptate mollit labore quis deserunt. Veniam fugiat adipisicing officia aliquip consectetur eu excepteur deserunt eiusmod aliqua ad. Deserunt aliquip nisi sunt duis nisi mollit magna magna dolor elit quis ut.</p>
+    </body>
 </html>
