--- a/activitats/html/02_formato/activitat2.html
+++ b/activitats/html/02_formato/activitat2.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en"></html>
 <head>
-    <a href="../../activitats.html">Torna al inici</a>
-<h1>Titulo siguiente con h1</h1>
-<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque hic nemo veritatis nihil odit aliquam architecto eveniet aliquid excepturi laboriosam possimus iusto quos animi aut illum. Aspernatur, maiores consequuntur!</h4>
-<h2>Titulo secundario con h2</h2>
-<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aliquid odit doloremque dolore consequatur, fugiat accusantium consequuntur harum voluptates rerum ex, tenetur ut nobis, ad minima ea? Veniam, soluta natus!</h4>
-<h2>Titulo secundario con h2</h2>
-<h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quas aspernatur maxime quibusdam voluptate eaque aperiam, in, ea facere autem, harum molestias cum voluptas amet minus neque similique ad odit.</h4>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalles de "Las Meninas" - Museo del Prado</title>
 </head>
+    <body>
+        <a href="../../activitats.html">Torna al inici</a>
+        <h1>Titulo siguiente con h1</h1>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque hic nemo veritatis nihil odit aliquam architecto eveniet aliquid excepturi laboriosam possimus iusto quos animi aut illum. Aspernatur, maiores consequuntur!</h4>
+        <h2>Titulo secundario con h2</h2>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aliquid odit doloremque dolore consequatur, fugiat accusantium consequuntur harum voluptates rerum ex, tenetur ut nobis, ad minima ea? Veniam, soluta natus!</h4>
+        <h2>Titulo secundario con h2</h2>
+        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quas aspernatur maxime quibusdam voluptate eaque aperiam, in, ea facere autem, harum molestias cum voluptas amet minus neque similique ad odit.</h4>
+    </body>
 </html>
