--- a/activitats/html/02_formato/activitat3.html
+++ b/activitats/html/02_formato/activitat3.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <a href="../../activitats.html">Torna al inici</a>
-    <h1>Aqui estoy gastando h1</h1>
-    <h2>Aqui estoy gastando h2</h2>
-    <h3>Aqui estoy gastando h3</h3>
-    <h4>Aqui estoy gastando h4</h4>
-    <h5>Aqui estoy gastando h5</h5>
-    <h6>Aqui estoy gastando h6</h6>
-    <p>Yo soy un simple parrafo</p>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
+        <a href="../../activitats.html">Torna al inici</a>
+        <h1>Aqui estoy gastando h1</h1>
+        <h2>Aqui estoy gastando h2</h2>
+        <h3>Aqui estoy gastando h3</h3>
+        <h4>Aqui estoy gastando h4</h4>
+        <h5>Aqui estoy gastando h5</h5>
+        <h6>Aqui estoy gastando h6</h6>
+        <p>Yo soy un simple parrafo</p>
+    </body>
 </html>
