--- a/activitats/html/02_formato/activitat4.html
+++ b/activitats/html/02_formato/activitat4.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
         <a href="../../activitats.html">Torna al inici</a>
 <h1>Actualidad</h1>
 <h5>La<b>sintaxis HTML</b>es altamente demandado en el actual <em>panorama tecnologico</em></h5>
-    </head>
+    </body>
 </html>
