--- a/activitats/html/02_formato/activitat5.html
+++ b/activitats/html/02_formato/activitat5.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 ><html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
         <a href="../../activitats.html">Torna al inici</a>
         <h1>Ejemplo uso de la etiqueta &lt;time&gt;</h1>
         <h4>Me despierto cada mañana a las &lt;time&gt;<time>7:00</time> &lt;/time&gt;</h4>
         <h4>No obstante soy feliz porque hoy es mi oportunidad, es &lt;time datetime="2008-02-14 20:00"&gt;San valentin&lt;/time&gt;</h4>
-    </head>
+    </body>
 </html>
