--- a/activitats/html/03_hypervinculos/activitat1.html
+++ b/activitats/html/03_hypervinculos/activitat1.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
+    <body>
         <h1>Restaurante chino</h1>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, neque ab molestiae tenetur unde perferendis labore, laudantium tempora autem repellat ea reprehenderit doloribus cupiditate! Sit beatae et laborum dolores excepturi.</h4>
         <h1>Quienes somos?</h1>
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sequi ex rerum maiores quidem eligendi assumenda adipisci veritatis explicabo beatae provident eos facilis aut blanditiis, nostrum quas magnam numquam rem!</h4>
         <a href="index_restaurant.html">Ver nuestra historia</a>
-    </head>
+    </body>
 </html>
