--- a/activitats/html/04_listas/activitat5.html
+++ b/activitats/html/04_listas/activitat5.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <ol>
             <li>Spinosaurus aegyptiacus</li>
