--- a/activitats/html/05_imagenes/activitat4.html
+++ b/activitats/html/05_imagenes/activitat4.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <h1>Receta de unos guenos macarrones</h1>
             <h6>No probar en casa</h6>
