--- a/activitats/html/07_formulario/activitat3.html
+++ b/activitats/html/07_formulario/activitat3.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <form>
             <label for="Nombre de usuario">Cual es tu nombre de usuario?</label>
