--- a/activitats/html/08_multimedia/activitat1.html
+++ b/activitats/html/08_multimedia/activitat1.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <div class="container mt-5">
             <div class="col-md-4 mb-4">
