--- a/activitats/html/08_multimedia/activitat2.html
+++ b/activitats/html/08_multimedia/activitat2.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+    </head>
     <body>
         <h1>¡Descubre nuestra emocionante película!</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/a8eKPw6mLqg?si=stHVZ4Mf0bM7HxBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
