--- a/activitats/html/02_formato/activitat2.html
+++ b/activitats/html/02_formato/activitat2.html
@@ -6,7 +6,7 @@
     <title>Detalles de "Las Meninas" - Museo del Prado</title>
 </head>
     <body>
-        <a href="../../activitats.html">Torna al inici</a>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Titulo siguiente con h1</h1>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque hic nemo veritatis nihil odit aliquam architecto eveniet aliquid excepturi laboriosam possimus iusto quos animi aut illum. Aspernatur, maiores consequuntur!</h4>
         <h2>Titulo secundario con h2</h2>
