--- a/activitats/html/02_formato/activitat3.html
+++ b/activitats/html/02_formato/activitat3.html
@@ -6,7 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
-        <a href="../../activitats.html">Torna al inici</a>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Aqui estoy gastando h1</h1>
         <h2>Aqui estoy gastando h2</h2>
         <h3>Aqui estoy gastando h3</h3>
