--- a/activitats/html/03_hypervinculos/activitat1.html
+++ b/activitats/html/03_hypervinculos/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Volver al inicio</a>
         <h1>Restaurante chino</h1>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, neque ab molestiae tenetur unde perferendis labore, laudantium tempora autem repellat ea reprehenderit doloribus cupiditate! Sit beatae et laborum dolores excepturi.</h4>
         <h1>Quienes somos?</h1>
