--- a/activitats/html/05_imagenes/activitat1.html
+++ b/activitats/html/05_imagenes/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Cafeteria</h1>
         <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dignissimos sed aliquid a quaerat, autem impedit sint velit tempore, earum modi, quisquam ratione aspernatur quibusdam esse at officiis adipisci iste?</h4>
         <h2>Dueño</h2>
