--- a/activitats/html/05_imagenes/activitat3.html
+++ b/activitats/html/05_imagenes/activitat3.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Aparatox</h1>
         <h2>Makvook</h2>
         <img
