--- a/activitats/html/05_imagenes/activitat4.html
+++ b/activitats/html/05_imagenes/activitat4.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Receta de unos guenos macarrones</h1>
             <h6>No probar en casa</h6>
         <h3>Se empieza con unos cuantos macarrones, seguidamente los ponemos a hervir y mientras hierven les ponemos sal y en un plato aparte se prepara un poco de queso, seguido de un poco de queso y otro poco de queso.</h3>
