--- a/activitats/html/07_formulario/activitat1.html
+++ b/activitats/html/07_formulario/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <form>
             <label for="MiNombre">Cual es tu nombre?</label>
             <input id="MiNombre" type="text" name="Name">
