--- a/activitats/html/07_formulario/activitat3.html
+++ b/activitats/html/07_formulario/activitat3.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <form>
             <label for="Nombre de usuario">Cual es tu nombre de usuario?</label>
             <input id="Nombre de usuario" type="text" name="Name">
