--- a/activitats/html/08_multimedia/activitat2.html
+++ b/activitats/html/08_multimedia/activitat2.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>¡Descubre nuestra emocionante película!</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/a8eKPw6mLqg?si=stHVZ4Mf0bM7HxBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h2>Información Técnica</h2>
