--- a/activitats/html/09_contenido/activitat1.html
+++ b/activitats/html/09_contenido/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <article>
             <h1>Patata al horno</h1>
             <p>Autor: Adolf Hittler</p>
