--- a/activitats/html/02_formato/activitat4.html
+++ b/activitats/html/02_formato/activitat4.html
@@ -6,7 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
-        <a href="../../activitats.html">Torna al inici</a>
+        <a href="../../activitats.html">Vuelve al inicio</a>
 <h1>Actualidad</h1>
 <h5>La<b>sintaxis HTML</b>es altamente demandado en el actual <em>panorama tecnologico</em></h5>
     </body>
