--- a/activitats/html/04_listas/activitat1.html
+++ b/activitats/html/04_listas/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Periódico</h1>
             <ul>
                 <li>El Mundo Today</li>
