--- a/activitats/html/04_listas/activitat3.html
+++ b/activitats/html/04_listas/activitat3.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Instrucciones para arreglar un portatil</h1>
             <ol>
                 <li>Apagar equipo</li>
