--- a/activitats/html/04_listas/activitat5.html
+++ b/activitats/html/04_listas/activitat5.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <ol>
             <li>Spinosaurus aegyptiacus</li>
                 <ul>
