--- a/activitats/html/05_imagenes/activitat2.html
+++ b/activitats/html/05_imagenes/activitat2.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>Redes sociales</h1>
         <img
             src="https://th.bing.com/th/id/OIP.aYVbqEFb2M-SWsBh_LafIQHaHa?w=167&h=180&c=7&r=0&o=5&pid=1.7"
