--- a/activitats/html/08_multimedia/activitat1.html
+++ b/activitats/html/08_multimedia/activitat1.html
@@ -6,6 +6,7 @@
         <title>Detalles de "Las Meninas" - Museo del Prado</title>
     </head>
     <body>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <div class="container mt-5">
             <div class="col-md-4 mb-4">
                 <div class="card">
