--- a/activitats/html/09_contenido/activitat2-1.html
+++ b/activitats/html/09_contenido/activitat2-1.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-    
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <nav>
             <ul>
                 <li><a href="activitat2-1.html">Listado de Discos</a></li>
