--- a/activitats/html/09_contenido/activitat2-2.html
+++ b/activitats/html/09_contenido/activitat2-2.html
@@ -7,7 +7,7 @@
     </style>
 </head>
 <body>
-
+    <a href="../../activitats.html">Vuelve al inicio</a>
     <nav>
         <ul>
             <li><a href="activitat2-1.html">Listado de Discos</a></li>
