--- a/activitats/html/11_interactivos/activitat1.html
+++ b/activitats/html/11_interactivos/activitat1.html
@@ -6,6 +6,7 @@
     <title>Detalles de "Las Meninas" - Museo del Prado</title>
 </head>
 <body>
+    <a href="../../activitats.html">Vuelve al inicio</a>
     <h1>Detalles de "Las Meninas" - Museo del Prado</h1>
     <details>
         <summary>¿Cómo se llama?</summary>
