--- a/activitats/html/11_interactivos/activitat3.html
+++ b/activitats/html/11_interactivos/activitat3.html
@@ -6,6 +6,7 @@
     <title>Currículum Vitae</title>
 </head>
 <body>
+    <a href="../../activitats.html">Vuelve al inicio</a>
     <h1>Currículum Vitae</h1>
     <ul>
         <li><strong>Nivel de conocimiento en HTML:</strong>
