--- a/activitats/html/12_accesibilidad/activitat2.html
+++ b/activitats/html/12_accesibilidad/activitat2.html
@@ -6,6 +6,7 @@
     <title>Formulario de Registro</title>
 </head>
 <body>
+    <a href="../../activitats.html">Vuelve al inicio</a>
     <h1>Registro de Usuario</h1>
     <form id="registrationForm">
         <label for="username">Nombre de usuario:</label>
