--- a/activitats/html/11_interactivos/activitat3.html
+++ b/activitats/html/11_interactivos/activitat3.html
@@ -10,29 +10,19 @@
     <h1>Currículum Vitae</h1>
     <ul>
         <li><strong>Nivel de conocimiento en HTML:</strong>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 63%;"></div>
-            </div>
+            <progress max="100" value="76">76%</progress>
         </li>
         <li><strong>Conocimiento sobre Photoshop/Gimp:</strong>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 72%;"></div>
-            </div>
+            <progress max="100" value="79">79%</progress>
         </li>
         <li><strong>Belleza:</strong>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 0%;"></div>
-            </div>
+            <progress max="100" value="0">0%</progress>
         </li>
         <li><strong>Hambre:</strong>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 100%;"></div>
-            </div>
+            <progress max="100" value="100">100%</progress>
         </li>
         <li><strong>Salud:</strong>
-            <div class="skill-bar">
-                <div class="skill-level" style="width: 27%;"></div>
-            </div>
+            <progress max="100" value="63">63%</progress>
         </li>
     </ul>
 </body>
