--- a/activitats/html/03_hypervinculos/activitat2.html
+++ b/activitats/html/03_hypervinculos/activitat2.html
@@ -1,1 +1,6 @@
-<a href="menudeldia.html">Menu del dia</a>
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <a href="menudeldia.html">Menu del dia</a>
+    </body>
+</html>
