--- a/activitats/html/03_hypervinculos/index_restaurant.html
+++ b/activitats/html/03_hypervinculos/index_restaurant.html
@@ -1,2 +1,7 @@
-<a href="activitat1.html">Restaurante chino</a>
-<a href="activitat2.html">Menu del dia</a>
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <a href="activitat1.html">Restaurante chino</a>
+        <a href="activitat2.html">Menu del dia</a>
+    </body>
+</html>
