--- a/activitats/html/05_imagenes/activitat3.html
+++ b/activitats/html/05_imagenes/activitat3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+        <title>Descripcion macbook</title>
     </head>
     <body>
         <a href="../../activitats.html">Vuelve al inicio</a>
