--- a/activitats/html/06_tablas/activitat3.html
+++ b/activitats/html/06_tablas/activitat3.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+        <title>Presentacion de habilidades</title>
     </head>
     <body>
-        <a href="../../activitats.html">Vuelve al inicioS</a>
+        <a href="../../activitats.html">Vuelve al inicio</a>
         <table>
             <thead>
                 <tr>
@@ -23,9 +23,9 @@
                             alt="Ferran"
                         >
                     </th>
-                    <th>Ferran Doussiet Parache</th>
-                    <th>Provador de macarrones profesional</th>
-                    <th>Saltar quesos</th>
+                    <th>Ferran Doussiet Parache.</th>
+                    <th>Provador de macarrones profesional.</th>
+                    <th>Saltar quesos.</th>
                 </tr>
             </tbody>
         </table>
