--- a/activitats/html/08_multimedia/activitat2.html
+++ b/activitats/html/08_multimedia/activitat2.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+        <title>Un mundo extraño, Trailer</title>
     </head>
     <body>
         <a href="../../activitats.html">Vuelve al inicio</a>
         <h1>¡Descubre nuestra emocionante película!</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/a8eKPw6mLqg?si=stHVZ4Mf0bM7HxBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/a8eKPw6mLqg?si=stHVZ4Mf0bM7HxBE" title="Un mundo extraño" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h2>Información Técnica</h2>
-        <table border="1">
+        <table>
             <tr>
                 <th>Título</th>
                 <td>Un mundo extraño</td>
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Actores</th>
-                <td>Jake Hyllenhall, ​Jaboukie Young-White y Lucy Liu</td>
+                <td>Jake Hyllenhall, Jaboukie Young-White y Lucy Liu</td>
             </tr>
             <tr>
                 <th>Año</th>
