--- a/activitats/html/09_contenido/activitat1.html
+++ b/activitats/html/09_contenido/activitat1.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+        <title>Receta de patatas al horno</title>
     </head>
     <body>
         <a href="../../activitats.html">Vuelve al inicio</a>
         <article>
             <h1>Patata al horno</h1>
-            <p>Autor: Adolf Hittler</p>
+            <p>Autor: Stalin</p>
             <p>Fecha de Publicación: 29 de noviembre de 2023</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula odio eu tellus tincidunt, sit amet vestibulum dolor fermentum. Integer eget arcu eget ex rhoncus consequat at in lorem.</p>
             <p>Vestibulum vel mauris nec arcu bibendum ullamcorper. Duis id ante a ligula pharetra consequat. Nullam non justo vel massa efficitur venenatis. Proin bibendum ipsum sit amet tortor dictum, sit amet fermentum dolor malesuada.</p>
