--- a/activitats/html/11_interactivos/activitat2.html
+++ b/activitats/html/11_interactivos/activitat2.html
@@ -20,7 +20,7 @@
             <option value="501-1000">501 - 1000€</option>
             <option value="1001-">Más de 1000€</option>
         </select>
-        <button type="button" onclick="search()">Buscar</button>
+        <button type="button" onclick="search">Buscar</button>
     </form>
     </body>
 </html>
