--- a/activitats/html/11_interactivos/activitat3.html
+++ b/activitats/html/11_interactivos/activitat3.html
@@ -9,19 +9,19 @@
     <a href="../../activitats.html">Vuelve al inicio</a>
     <h1>Currículum Vitae</h1>
     <ul>
-        <li><strong>Nivel de conocimiento en HTML:</strong>
+        <li><h2>Nivel de conocimiento en HTML:</h2>
             <progress max="100" value="76">76%</progress>
         </li>
-        <li><strong>Conocimiento sobre Photoshop/Gimp:</strong>
+        <li><h2>Conocimiento sobre Photoshop/Gimp:</h2>
             <progress max="100" value="79">79%</progress>
         </li>
-        <li><strong>Belleza:</strong>
+        <li><h2>Belleza:</h2>
             <progress max="100" value="0">0%</progress>
         </li>
-        <li><strong>Hambre:</strong>
+        <li><h2>Hambre:</h2>
             <progress max="100" value="100">100%</progress>
         </li>
-        <li><strong>Salud:</strong>
+        <li><h2>Salud:</h2>
             <progress max="100" value="63">63%</progress>
         </li>
     </ul>
