--- a/activitats/html/03_hypervinculos/menudeldia.html
+++ b/activitats/html/03_hypervinculos/menudeldia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Detalles de "Las Meninas" - Museo del Prado</title>
+        <title>El menu del dia</title>
     </head>
     <body>
         <a href="index_restaurant.html">Volver al inicio</a>
