--- a/activitats/html/12_accesibilidad/activitat2.html
+++ b/activitats/html/12_accesibilidad/activitat2.html
@@ -14,7 +14,7 @@
         <label for="email">Correo electrónico:</label>
         <input type="email" id="email" name="email" required aria-describedby="email-description">
         <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required aria-describedby="password-description">
+        <input type="password" id="password" name="Contraseña" required aria-describedby="password-description">
         <button type="submit">Registrarse</button>
     </form>
     <p id="username-description" role="alert">Ingrese un nombre de usuario único.</p>
