--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -95,5 +95,15 @@
                     </ul>
             </ul>
     </ul>
+    <ul>
+        <h2>CSS</h2>
+            <ul>
+                <h3>Selectores</h3>
+                    <ul>
+                        <li><a href="css/03_selectores/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/03_selectores/activitat2.html">Activitat 2</a></li>
+                    </ul>
+            </ul>
+    </ul>
 </body>
 </html>
