--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -102,6 +102,7 @@
                     <ul>
                         <li><a href="css/03_selectores/activitat1.html">Activitat 1</a></li>
                         <li><a href="css/03_selectores/activitat2.html">Activitat 2</a></li>
+                        <li><a href="css/03_selectores/activitat3.html">Activitat 3</a></li>
                     </ul>
             </ul>
     </ul>
