--- a/activitats/css/03_selectores/activitat3.html
+++ b/activitats/css/03_selectores/activitat3.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #pluton {color: cadetblue;}
+    </style>
 </head>
 <body>
-    
+<p id="pluton" class="venus" class="marte">Lorem ipsum</p>
+<p id="pluton" class="venus marte">Lorem ipsum</p>
 </body>
 </html>
