--- a/activitats/html/09_contenido/activitat2-2.html
+++ b/activitats/html/09_contenido/activitat2-2.html
@@ -13,7 +13,7 @@
             <li><a href="activitat2-2.html">Ficha del Disco</a></li>
         </ul>
     <section>
-        <p><a href="index.html">Inicio</a> > <a href="activitat2-1.html">Listado de Discos</a> 
+        <p><a href="activitat2-1.html">Listado de Discos</a> 
         Ficha del Disco</p>
         <h1>Ficha del Disco</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus eaque laboriosam est sequi autem libero amet voluptate, culpa accusamus ipsam repudiandae reiciendis veritatis recusandae quaerat tempora ab. Vero, at?</p>
