--- a/activitats/html/09_contenido/activitat2-1.html
+++ b/activitats/html/09_contenido/activitat2-1.html
@@ -12,7 +12,7 @@
                 <li><a href="activitat2-2.html">Ficha del Disco</a></li>
             </ul>
         <section>
-            <p><a href="activitat1.html">Inicio</a> > Listado de Discos</p>
+            <p><a href="activitat2-1.html">Listado de discos</a></p>
             <form action="#" method="get">
                 <label for="buscar">Buscar:</label>
                 <input type="text" id="buscar" name="buscar">
