--- a/activitats/css/04_variables/activitat1.html
+++ b/activitats/css/04_variables/activitat1.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{}
+        h1{
+            color: #4B69F0;
+        }
     </style>
 </head>
 <body>
-    
+    <h1><a href="../../activitats.html">Tornar al inici</a></h1>
+    <p><a href="../../html/05_imagenes/activitat4.html">Receta de macarrones</a></p>
 </body>
 </html>
