--- a/activitats/css/04_variables/activitat2.html
+++ b/activitats/css/04_variables/activitat2.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+    .rectangulo {width: 280px; height: 160px; border: 3px solid #000000;}
     </style>
 </head>
 <body>
-    <h1><a href="../../activitats.html"><span style="color: aqua;">Tornar al inici</span></a></h1>
-    <p><a href="../../html/05_imagenes/activitat4.html"><span style="color: chartreuse;">Receta de macarrones</span></a></p>
+    <div class="rectangulo"></div>
 </body>
 </html>
