--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -105,6 +105,28 @@
                         <li><a href="css/03_selectores/activitat3.html">Activitat 3</a></li>
                     </ul>
             </ul>
+            <ul>
+                <h3>Variables</h3>
+                    <ul>
+                        <li><a href="css/04_variables/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/04_variables/activitat2.html">Activitat 2</a></li>
+                    </ul>
+            </ul>
+            <ul>
+                <h3>BEM</h3>
+                    <ul>
+                        <li><a href="css/06_BEM/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/06_BEM/activitat2.html">Activitat 2</a></li>
+                    </ul>
+            </ul>
+            <ul>
+                <h3>color</h3>
+                    <ul>
+                        <li><a href="css/07_Color/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/07_Color/activitat2.html">Activitat 2</a></li>
+                        <li><a href="css/07_Color/activitat3.html">Activitat 3</a></li>
+                    </ul>
+            </ul>
     </ul>
 </body>
 </html>
