--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activitats</title>
 </head>
 <body>
     <ul>
@@ -120,11 +120,18 @@
                     </ul>
             </ul>
             <ul>
-                <h3>color</h3>
+                <h3>Color</h3>
                     <ul>
                         <li><a href="css/07_Color/activitat1.html">Activitat 1</a></li>
                         <li><a href="css/07_Color/activitat2.html">Activitat 2</a></li>
                         <li><a href="css/07_Color/activitat3.html">Activitat 3</a></li>
+                    </ul>
+            </ul>
+            <ul>
+                <h3>Texto</h3>
+                    <ul>
+                        <li><a href="css/08_Texto/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/08_Texto/activitat2.html">Activitat 2</a></li>
                     </ul>
             </ul>
     </ul>
