--- a/activitats/css/07_Color/activitat3.html
+++ b/activitats/css/07_Color/activitat3.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Activitat 3</title>
 </head>
 <body>
-    <header></header>
+    <header><span style="color: rgb(240, 35, 35);"><h3>Simplest</span><span style="color: rgb(231, 1, 1);"><strong>Blog</strong></h3></span></header>
+    <p>Hi, i'm <span style="background-color: rgb(255, 0, 0);">Fernando Moreira</span>, a froonted ingineer.</p>
+    <p>Enthusiast performance, responsive desing and usability, always looking for the best project and good coffee. --<span style="color: rgb(255, 0, 0);">about me</span></p>
+    <footer>
+        <h1>Writting...</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur nesciunt omnis eaque. Et, ad, molestiae, adipisci ipsum delectus quos optio minus est magnam ab consectetur eveniet dignissimos dicta suscipit ea?</p>
+    </footer>
 </body>
 </html>
