--- a/activitats/css/08_Texto/activitat1.html
+++ b/activitats/css/08_Texto/activitat1.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <style>
+    .texto {
+      font-size: 16px;
+      font-style: italic;
+      font-weight: 300;
+    }
+  </style>
 </head>
 <body>
-   <h1><span style="font-size: larger;">Moby Dick</span></h1>
+   <p class="texto">Moby Dick</p>
 
-<p><span style="font-style: italic;">Herman Melville</span></p>
+<p class="texto">Herman Melville</p>
 
-<p><span style="font-weight: 400;">Prólogo</span></p>
+<p class="texto">Prólogo</p>
 
 <p>Vivimos tiempos en que los hombres pueden arponear impunemente a las ballenas.</p>
  <p>A despecho de todos los ecologistas del mundo, las localizan por medio del radar, consiguen incluso algunas veces la complicidad de un hidroavión y luego,</p>
