--- a/activitats/css/08_Texto/activitat2.html
+++ b/activitats/css/08_Texto/activitat2.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .texto1 {
+            letter-spacing: 14px;
+        }
+        .texto2 {
+            word-spacing: 17px;
+        }
+        .mayusculas {
+            text-transform: uppercase;
+        }
+        .justificar {
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
-    <span style="letter-spacing: 1,2rem;"><h1>Moby Dick</h1></span>
+    <p class="texto1">Moby Dick</p>
 
-Herman Melville
+<p class="texto2">Herman Melville</p>
 
-Prólogo
+<p class="mayusculas">Prólogo</p>
 
-Vivimos tiempos en que los hombres pueden arponear impunemente a las ballenas.
+<p class="justificar">Vivimos tiempos en que los hombres pueden arponear impunemente a las ballenas.
  A despecho de todos los ecologistas del mundo, las localizan por medio del radar, consiguen incluso algunas veces la complicidad de un hidroavión y luego,
   para dar muerte al enorme mamífero que emerge a lo lejos, tienen suficiente ya con apretar el gatillo desde la cubierta del barco homicida. Ni siquiera les tiembla el pulso.
 
 Hubo otras épocas, sin embargo, en las que no lo tuvieron tan fácil. Los marineros embarcaban entonces en incómodos veleros, arriaban precipitadamente los botes,
- remaban sin descanso hacia donde estaba la ballena y, cuando la tenían a tiro, lanzaban los crueles arpones y confiaban en su buena suerte.
+ remaban sin descanso hacia donde estaba la ballena y, cuando la tenían a tiro, lanzaban los crueles arpones y confiaban en su buena suerte.</p>
 </body>
 </html>
