--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -132,6 +132,8 @@
                     <ul>
                         <li><a href="css/08_Texto/activitat1.html">Activitat 1</a></li>
                         <li><a href="css/08_Texto/activitat2.html">Activitat 2</a></li>
+                        <li><a href="css/08_Texto/activitat3.html">Activitat 3</a></li>
+                        <li><a href="css/08_Texto/activitat4.html">Activitat 4</a></li>
                     </ul>
             </ul>
     </ul>
