--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -6,6 +6,7 @@
     <title>Activitats</title>
 </head>
 <body>
+    <a href="Portafoli.html">Tornar al Portafoli</a>
     <ul>
         <h2> HTML</h2>
             <ul>
@@ -134,6 +135,14 @@
                         <li><a href="css/08_Texto/activitat2.html">Activitat 2</a></li>
                         <li><a href="css/08_Texto/activitat3.html">Activitat 3</a></li>
                         <li><a href="css/08_Texto/activitat4.html">Activitat 4</a></li>
+                        <li><a href="css/08_Texto/activitat5.html">Activitat 5</a></li>
+                    </ul>
+            </ul>
+            <ul>
+                <h3>Texto</h3>
+                    <ul>
+                        <li><a href="css/09_Medidas/activitat1.html">Activitat 1</a></li>
+                        <li><a href="css/09_Medidas/activitat2.html">Activitat 2</a></li>
                     </ul>
             </ul>
     </ul>
