--- a/activitats/css/08_Texto/activitat4.html
+++ b/activitats/css/08_Texto/activitat4.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @font-face {
+            font-family: "Titulo" ;
+            src: url(//Playfair_Display_SC/PlayfairDisplaySC-Regular.ttf) format(ttf);
+        }
+        .titulon {
+            font-family: "Titulo";
+        }
+        @font-face {
+            font-family: "Cuerpo de texto";
+            src: url(//Josefin_Slab/JosefinSlab-VariableFont_wght.ttf) format(ttf);
+        }
+        .Cuerpo {
+            font-family: "Cuerpo de texto";
+        }
+    </style>
 </head>
 <body>
-    
+    <p class="titulon">Exploracion espacial</p>
+    <p class="Cuerpo">En el vasto y misterioso cosmos, la exploración espacial ha sido una búsqueda que ha cautivado la imaginación humana durante décadas. Desde los primeros viajes a la Luna hasta las misiones a los confines del sistema solar, la humanidad ha demostrado una insaciable sed de conocimiento sobre los secretos del universo.
+
+La odisea espacial comenzó con valientes pioneros que se aventuraron más allá de nuestra atmósfera, desafiando la gravedad terrestre para tocar el polvo lunar. Desde aquellos momentos históricos, hemos enviado sondas a planetas distantes, como Marte y Júpiter, desentrañando sus misterios a través de cámaras y sensores avanzados.
+
+En la actualidad, estaciones espaciales como la Estación Espacial Internacional (EEI) orbitan la Tierra, sirviendo como laboratorios en el espacio donde científicos de todo el mundo colaboran en experimentos que van desde la biología hasta la física cuántica. La exploración espacial no solo busca respuestas sobre el origen del universo, sino también soluciones para desafíos terrestres, como la sostenibilidad y la tecnología de vanguardia.
+
+A medida que miramos hacia el futuro, nuevos horizontes se abren con proyectos ambiciosos, como la colonización de Marte y la búsqueda de vida extraterrestre. La exploración espacial continúa siendo una fuente inagotable de inspiración, recordándonos que, en última instancia, somos solo un pequeño punto en la inmensidad del cosmos, con un vasto universo esperando ser descubierto.</p>
 </body>
 </html>
