--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -143,6 +143,8 @@
                     <ul>
                         <li><a href="css/09_Medidas/activitat1.html">Activitat 1</a></li>
                         <li><a href="css/09_Medidas/activitat2.html">Activitat 2</a></li>
+                        <li><a href="css/09_Medidas/activitat3.html">Activitat 3</a></li>
+                        <li><a href="css/09_Medidas/activitat4.html">Activitat 4</a></li>
                     </ul>
             </ul>
     </ul>
