activitats 3 i 4 de l'apartat 9

--- a/activitats/css/09_Medidas/activitat3.html
+++ b/activitats/css/09_Medidas/activitat3.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .parrafo {
+            max-height: 10rem;
+            min-height: 5rem;
+            background-color: aquamarine;
+        }
+    </style>
 </head>
 <body>
-    
+    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quod sunt vero obcaecati, quam nemo dolorum tenetur corrupti, facilis commodi soluta laborum blanditiis numquam molestiae a quibusdam eligendi! Iste, assumenda! Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia assumenda aliquam, eius error sint rem, quod quo voluptatem eligendi possimus obcaecati tenetur ab tempore sunt, deserunt vel repudiandae doloribus reiciendis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, minima similique? Quis, minus nemo neque praesentium magni architecto deleniti nihil nobis incidunt enim molestiae, cum alias ipsam ipsa maiores perferendis.</p>
 </body>
 </html>
