--- a/activitats/css/11_Display/activitat1.html
+++ b/activitats/css/11_Display/activitat1.html
@@ -6,8 +6,13 @@
     <title>Document</title>
     <style>
         .enlinealoco {
-            display: block flow-root;
-            display: inline flow-root;
+            display: block;
+            display: inline;
+            display: inline-block;
+            display: flex;
+            display: inline-flex;
+            display: grid;
+            display: inline-grid;
         }
     </style>
 </head>
