--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Ferran Etienne</h2>
+    <header>
     <a href="activitats/activitats.html">Anar a activitats</a>
+    </header>
 </body>
 </html>
