--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-    <a href="activitats/activitats.html">Anar a activitats</a>
+        <img src="">
+        <a href="activitats/activitats.html">Anar a activitats</a>
     </header>
 </body>
 </html>
